<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.woodman.testtravelapp.activity.SingUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_gradient" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInputSingUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="160dp"
                android:background="@drawable/background_rectangle"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sing_up_activity_textView_full_name" />

                <EditText
                    android:id="@+id/edit_text_sing_up_activity_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_person_outline"
                    android:hint="@string/sing_up_activity_hint_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up_activity_textView_email" />

                <EditText
                    android:id="@+id/edit_text_sing_up_activity_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_mail_outline"
                    android:drawablePadding="20dp"
                    android:hint="@string/sing_up_activity_hint_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sing_up_activity_textView_password" />

                <EditText
                    android:id="@+id/edit_text_sing_up_activity_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_visibility"
                    android:drawablePadding="20dp"
                    android:hint="@string/sing_up_activity_hint_password"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/btn_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_gradient"
                    android:text="@string/btn_sing_up"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_sing_up_text" />

                <Button
                    android:id="@+id/btn_sing_up_with_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_gradient_fb"
                    android:text="@string/btn_sing_up_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_sing_up_with_facebook_text" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/sing_up_icon"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sing_up_activity_textView_sing_up"
                android:textColor="@color/sing_up_activity_textView_sing_up"
                android:textSize="25sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_up_textView_little_bottom_question" />

            <TextView
                android:id="@+id/sing_up_activity_textView_sing_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sing_up_textView_little_message_action_sing_in"
                android:textStyle="bold" />
        </LinearLayout>




</RelativeLayout>
