<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.woodman.testtravelapp.activity.StartingActivity">

    <LinearLayout
        android:id="@+id/layoutLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/starting_activity_textView_logo"
            android:textSize="50sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/starting_activity_textView_little_description"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sing_up_starting_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_gradient"
            android:text="@string/btn_sing_up"
            android:textColor="@color/btn_sing_up_text"
            />

        <Button

            android:id="@+id/btn_sing_in_starting_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_sing_in"
            android:textColor="@color/btn_sing_in_activity_sing_in"
            android:background="@drawable/rectangle_stroke_wight"
            />
    </LinearLayout>
</LinearLayout>
